src/app/home/home/home.component.css
input[type=text], select {
  width: 50%;
  padding: 14px 20px;
  margin-left: 290px;
  display: inline-block;
  border: 1px solid #b3a9a9;
  border-radius: 4px;
  box-sizing: border-box;
}

input[type=submit] {
  background-color: #4CAF50;
  color: white;
  padding: 14px 20px;
  display: inline-block;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

input[type=submit]:hover {
  background-color: #45a049;
}

.form {
  border-radius: 5px;
  padding: 50px;
}

p {
  padding: 16px;
  text-align: center;
}

.add-book-button {
  z-index: 5;
  position: fixed;
  display: flex;
  align-self: flex-end;
  bottom: 7%;
  margin-bottom: 5px;
  margin-left: 80%;
}

.listImage {
  background-image: url("https://i.postimg.cc/j22QP8Y8/library.jpg");
  background-repeat: no-repeat;
  background-size: 100% 100%;
}


.bookBorder {
  margin-left: 5px;
  margin-right: 5px;
  border: 2px solid rgb(197, 190, 190);
  border-radius: 8px;
  background: rgba(255, 248, 220, 0.637);
}

.blist {
  list-style-position: inside;

  margin-top: 6px;
  margin-bottom: 6px;
  
  text-align: center;
  padding-top: 6px;
  padding-bottom: 6px;
  
}

/* .search {
  position: relative;
  text-align: center;
  float: right;
  cursor: pointer;
  margin-left: 10%;
} */


#bookSearchButton {
  margin-right:50px;
  background-color: #B92E10;
  color: white;
  border: 2px solid #555555;
  border-radius: 8px;
  -webkit-transition-duration: 0.4s;
}


#bookSearchButton:hover {
  background-color: royalblue;
  color: white;
}

